# pykirk

./: pyproject.toml
pykirk/: pykirk.tcss  tui.py
